--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -115,7 +115,7 @@
   <string name="rdg_plan_title">Lāsīšanas plāns</string>
   <string name="rdg_plan_selector_title">Izvēlies lasīšanas plānu</string>
   <string name="rdg_plan_day">%s\'. Diena</string>
-  <string name="rdg_plan_set_start_jan1">Sākt ar 1. janvāri</string>
+  <string name="rdg_plan_set_start_date">Sākt ar 1. janvāri</string>
   <string name="done">Pabeigts</string>
   <string name="reset">Salikt no jauna</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
