--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -112,7 +112,7 @@
   <string name="rdg_plan_title">Leseplan</string>
   <string name="rdg_plan_selector_title">Velg en leseplan</string>
   <string name="rdg_plan_day">Dag %s</string>
-  <string name="rdg_plan_set_start_jan1">Start 1. januar</string>
+  <string name="rdg_plan_set_start_date">Start 1. januar</string>
   <string name="done">Ferdig</string>
   <string name="reset">Tilbakestill</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
