Initial implementation for tabs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -424,11 +424,11 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <!-- Notifications -->
     <string name="notification_channel_tts_status">Text to speech</string>
     <string name="notification_channel_progress_status">Progress status notification for document downloads etc.</string>
-    <string name="save_state">Save state</string>
-    <string name="restore_state">Restore state</string>
+
+    <!-- Tabs -->
     <string name="tabs">Tabs</string>
     <string name="new_tab">New Tab</string>
-    <string name="switch_to_tab">Switch to Tab ...</string>
-    <string name="clone_tab">Clone tab</string>
+    <string name="switch_to_tab">Switch to Tab …</string>
     <string name="close_tab">Close tab</string>
+    <string name="choose_tab_to_open">Choose tab to open</string>
 </resources>
