--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -429,6 +429,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="tabs">Tabs</string>
     <string name="new_tab">New Tab</string>
     <string name="switch_to_tab">Switch to Tab …</string>
-    <string name="close_tab">Close tab</string>
+    <string name="close_tab">Close this tab</string>
     <string name="choose_tab_to_open">Choose tab to open</string>
+    <string name="new_copied_tab">Copy this tab as new</string>
 </resources>
