--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -433,4 +433,5 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="choose_tab_to_open">Choose tab to open</string>
     <string name="new_copied_tab">Copy this tab as new</string>
     <string name="tab_number">Tab %d</string>
+    <string name="tab_num_contents">Tab %d: %s</string>
 </resources>
