--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -425,16 +425,16 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="notification_channel_tts_status">Text to speech</string>
     <string name="notification_channel_progress_status">Progress status notification for document downloads etc.</string>
 
-    <!-- Tabs -->
-    <string name="tabs">Tabs</string>
-    <string name="new_tab">New Tab</string>
-    <string name="switch_to_tab">Switch to Tab …</string>
-    <string name="close_tab">Close this tab</string>
-    <string name="choose_tab_to_open">Choose tab to open</string>
-    <string name="new_copied_tab">Copy this tab as new</string>
-    <string name="tab_number">Tab %d</string>
-    <string name="tab_num_contents">Tab %d: %s</string>
-    <string name="tab_name_contents">%s: %s</string>
-    <string name="rename_tab">Rename tab …</string>
-    <string name="rename_tab_title">Give a name for this tab</string>
+    <!-- Workspaces -->
+    <string name="workspaces">Workspaces</string>
+    <string name="new_workspace">New workspace</string>
+    <string name="switch_to_workspace">Switch to workspace…</string>
+    <string name="close_workspace">Close this workspace</string>
+    <string name="choose_workspace_to_open">Choose wokspace to open</string>
+    <string name="new_copied_workspace">Copy this workspace as new</string>
+    <string name="workspace_number">Workspace %d</string>
+    <string name="workspace_num_contents">Workspace %d: %s</string>
+    <string name="workspace_name_contents">%s: %s</string>
+    <string name="rename_workspace">Rename workspace …</string>
+    <string name="rename_workspace_title">Give a name for this workspace</string>
 </resources>
